addition of the timer and playerWin determinants according to their life span

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
             
 
             <!-- timer -->
-            <div class="timer"></div>
+            <div id="timer" class="game-timer" >10</div>
 
             <!-- player2 health -->
             <div class="p2mains1">
                 <div class="player2-health" ></div>
                 <div class="p2mains2" id="player2Health"></div>
             </div>
-            
+
         </div>
+
+        <div id="tieDisplay" class="Tie-styles">Tie</div>
         <canvas></canvas>
     </div>
    
