addition of background and shop sprites

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <div id="tieDisplay" class="Tie-styles">Tie</div>
         <canvas></canvas>
     </div>
-   
+    
+    <script src="js/funcutils.js"></script>
+    <script src="js/classes.js"></script>
     <script src="index.js"></script>
     
 </body>
