added extra interfaces

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="icon" type="image/png" href="images_cfoundry/favicon-16x16.png" sizes="16x16"/>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- red container div -->
@@ -35,7 +38,9 @@
         <div id="tieDisplay" class="Tie-styles">Tie</div>
         <canvas></canvas>
     </div>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js" 
+    integrity="sha512-GQ5/eIhs41UXpG6fGo4xQBpwSEj9RrBvMuKyE2h/2vw3a9x85T1Bt0JglOUVJJLeyIUl/S/kCdDXlE/n7zCjIg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/funcutils.js"></script>
     <script src="js/classes.js"></script>
     <script src="index.js"></script>
